--- a/app/src/main/res/layout/item_age_indicator.xml
+++ b/app/src/main/res/layout/item_age_indicator.xml
@@ -10,10 +10,12 @@
         android:background="@drawable/bg_indicator"
         android:gravity="center">
         <ImageView
+                android:id="@+id/iv_ageindicator_gender"
             android:src="@drawable/icon_gender_female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tv_ageindicator_age"
             android:layout_marginLeft="3dp"
             android:layout_gravity="center"
             android:textSize="22sp"
