--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,16 @@
                 </LinearLayout>
 
         </LinearLayout>
+        <kaede.me.howoldrobot.widget.AgeIndicatorLayout
+                android:background="#00000000"
+                android:id="@+id/layout_main_age"
+                android:layout_marginLeft="@dimen/margin_main_left"
+                android:layout_marginRight="@dimen/margin_main_left"
+                android:layout_marginTop="@dimen/margin_main_top"
+                android:layout_marginBottom="@dimen/margin_main_top"
+                android:layout_width="match_parent"
+                android:layout_above="@+id/layout_main_bottom"
+                android:layout_height="match_parent"></kaede.me.howoldrobot.widget.AgeIndicatorLayout>
         <LinearLayout
             android:layout_marginLeft="@dimen/margin_main_left"
             android:layout_marginRight="@dimen/margin_main_left"
