--- a/app/src/main/res/layout/item_age_indicator.xml
+++ b/app/src/main/res/layout/item_age_indicator.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<kaede.me.howoldrobot.widget.MesureLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<kaede.me.howoldrobot.widget.AgeIndicatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="wrap_content" android:gravity="center"
+    android:layout_height="wrap_content" android:background="@drawable/bg_indicator"
     >
     <LinearLayout
         android:paddingBottom="5dp"
         android:layout_width="@dimen/indicator_width"
         android:layout_height="@dimen/indicator_height"
-        android:background="@drawable/bg_indicator"
         android:gravity="center">
         <ImageView
                 android:id="@+id/iv_ageindicator_gender"
@@ -16,7 +15,7 @@
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/tv_ageindicator_age"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="8dp"
             android:layout_gravity="center"
             android:textSize="22sp"
             android:text="17"
@@ -25,4 +24,4 @@
             android:layout_height="wrap_content" />
         </LinearLayout>
 
-</kaede.me.howoldrobot.widget.MesureLayout>
+</kaede.me.howoldrobot.widget.AgeIndicatorLayout>
