--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#DDD"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#DDD"
+              android:orientation="vertical"
+              tools:context=".MainActivity">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/common_actionbar_height"
-        android:background="@color/orange_500"
-        android:gravity="center">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
-        </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:id="@+id/layout_main_photo"
-            android:layout_marginLeft="@dimen/margin_main_left"
-            android:layout_marginRight="@dimen/margin_main_left"
-            android:layout_marginTop="@dimen/margin_main_top"
-            android:layout_marginBottom="@dimen/margin_main_top"
-            android:background="@drawable/cardui_round_bg"
-            android:layout_above="@+id/layout_main_bottom"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:background="@color/orange_500"
+            android:layout_height="@dimen/common_actionbar_height"
+            android:background="@color/orange_500"
+            android:gravity="center">
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                >
-                <kaede.me.howoldrobot.widget.FaceImageView
-                    android:layout_margin="@dimen/border_main_photo"
-                    android:id="@+id/iv_main_face"
-                    android:src="@drawable/test"
+                android:text="@string/app_name"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"/>
+    </LinearLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:id="@+id/layout_main_photo"
+                android:layout_marginLeft="@dimen/margin_main_left"
+                android:layout_marginRight="@dimen/margin_main_left"
+                android:layout_marginTop="@dimen/margin_main_top"
+                android:layout_marginBottom="@dimen/margin_main_top"
+                android:background="@drawable/cardui_round_bg"
+                android:layout_above="@+id/layout_main_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+            <LinearLayout
+                    android:background="@color/orange_500"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    >
+                <kaede.me.howoldrobot.widget.FaceImageView
+                        android:layout_margin="@dimen/border_main_photo"
+                        android:id="@+id/iv_main_face"
+                        android:src="@drawable/test"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+            </LinearLayout>
 
         </LinearLayout>
         <kaede.me.howoldrobot.widget.AgeIndicatorLayout
@@ -57,50 +58,74 @@
                 android:layout_above="@+id/layout_main_bottom"
                 android:layout_height="match_parent"></kaede.me.howoldrobot.widget.AgeIndicatorLayout>
         <LinearLayout
-            android:layout_marginLeft="@dimen/margin_main_left"
-            android:layout_marginRight="@dimen/margin_main_left"
-            android:layout_marginBottom="@dimen/margin_main_top"
-            android:id="@+id/layout_main_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/cardui_round_bg"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/btn_main_camera"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:textColor="@android:color/white"
-                android:text="CAMERA"
-                android:background="@drawable/bg_button_round"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                />
-            <Button
-                android:id="@+id/btn_main_gallery"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:textColor="@android:color/white"
-                android:text="GALLERY"
-                android:background="@drawable/bg_button_round"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                />
-            <Button
-                android:id="@+id/btn_main_share"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:textColor="@android:color/white"
-                android:text="SHARE"
-                android:background="@drawable/bg_button_round"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                />
+                android:layout_marginLeft="@dimen/margin_main_left"
+                android:layout_marginRight="@dimen/margin_main_left"
+                android:layout_marginBottom="@dimen/margin_main_top"
+                android:id="@+id/layout_main_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/cardui_round_bg"
+                android:orientation="horizontal">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:id="@+id/btn_main_camera"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="@drawable/bg_button_round"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp">
+                <ImageView android:src="@drawable/icon_camera"
+                           android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                          android:text="CAMERA"
+                          android:layout_marginLeft="5dp"
+                          android:textColor="@android:color/white"
+                          android:drawablePadding="10dp"
+                        />
             </LinearLayout>
-        </RelativeLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:id="@+id/btn_main_gallery"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="@drawable/bg_button_round"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp">
+                <ImageView android:src="@drawable/icon_gallery"
+                           android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                          android:text="GALLERY"
+                          android:layout_marginLeft="5dp"
+                          android:textColor="@android:color/white"
+                          android:drawablePadding="10dp"
+                        />
+            </LinearLayout>
 
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:id="@+id/btn_main_share"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:background="@drawable/bg_button_round"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp">
+                <ImageView android:src="@drawable/icon_share"
+                           android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                          android:text="SHARE"
+                          android:layout_marginLeft="5dp"
+                          android:textColor="@android:color/white"
+                          android:drawablePadding="10dp"
+                        />
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
