--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,13 +74,13 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:background="@drawable/bg_button_round"
+                    android:background="@drawable/selector_bg_button_round"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp">
                 <ImageView android:src="@drawable/icon_camera"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                          android:text="CAMERA"
+                          android:text="@string/main_tv_camera"
                           android:layout_marginLeft="5dp"
                           android:textColor="@android:color/white"
                           android:drawablePadding="10dp"
@@ -93,13 +93,13 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:background="@drawable/bg_button_round"
+                    android:background="@drawable/selector_bg_button_round"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp">
                 <ImageView android:src="@drawable/icon_gallery"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                          android:text="GALLERY"
+                    android:text="@string/main_tv_gallery"
                           android:layout_marginLeft="5dp"
                           android:textColor="@android:color/white"
                           android:drawablePadding="10dp"
@@ -112,13 +112,13 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:background="@drawable/bg_button_round"
+                    android:background="@drawable/selector_bg_button_round"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp">
                 <ImageView android:src="@drawable/icon_share"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                          android:text="SHARE"
+                    android:text="@string/main_tv_share"
                           android:layout_marginLeft="5dp"
                           android:textColor="@android:color/white"
                           android:drawablePadding="10dp"
