--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_web" android:title="@string/action_star"
+        android:orderInCategory="99" app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_star" android:title="@string/action_star"
+        android:orderInCategory="100" app:showAsAction="collapseActionView" />
 </menu>
