--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="orange_500">#FF9800</color>
-    <color name="orange_press">#FFDD55</color>
+    <color name="orange_200">#FFCC80</color>
 </resources>
