--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,13 +41,13 @@
                 <kaede.me.howoldrobot.widget.FaceImageView
                         android:layout_margin="@dimen/border_main_photo"
                         android:id="@+id/iv_main_face"
-                        android:src="@drawable/test"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
             </LinearLayout>
 
         </LinearLayout>
         <kaede.me.howoldrobot.widget.AgeIndicatorLayout
+
                 android:background="#00000000"
                 android:id="@+id/layout_main_age"
                 android:layout_marginLeft="@dimen/margin_main_left"
@@ -56,7 +56,23 @@
                 android:layout_marginBottom="@dimen/margin_main_top"
                 android:layout_width="match_parent"
                 android:layout_above="@+id/layout_main_bottom"
-                android:layout_height="match_parent"></kaede.me.howoldrobot.widget.AgeIndicatorLayout>
+            android:gravity="center"
+                android:layout_height="match_parent">
+           <LinearLayout
+               android:orientation="vertical"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">
+               <ImageView
+                   android:layout_margin="@dimen/border_main_photo"
+                   android:src="@drawable/icon_how_old"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="1"/>
+           </LinearLayout>
+        </kaede.me.howoldrobot.widget.AgeIndicatorLayout>
         <LinearLayout
                 android:layout_marginLeft="@dimen/margin_main_left"
                 android:layout_marginRight="@dimen/margin_main_left"
