--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
             <LinearLayout
-                    android:background="@color/orange_500"
+                android:id="@+id/layout_main_border"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     >
@@ -56,9 +56,10 @@
                 android:layout_marginBottom="@dimen/margin_main_top"
                 android:layout_width="match_parent"
                 android:layout_above="@+id/layout_main_bottom"
-            android:gravity="center"
                 android:layout_height="match_parent">
            <LinearLayout
+               android:id="@+id/layout_main_introduce"
+               android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
@@ -68,9 +69,32 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
+                   android:layout_marginTop="30dp"
+                   android:textSize="14sp"
+                   android:textColor="@color/orange_500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
-                   android:text="1"/>
+                   android:singleLine="true"
+                   android:ellipsize="marquee"
+                   android:text="@string/main_introduce_first"/>
+               <TextView
+                   android:layout_marginTop="2dp"
+                   android:textSize="14sp"
+                   android:textColor="@color/orange_500"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:singleLine="true"
+                   android:ellipsize="marquee"
+                   android:text="@string/main_introduce_second"/>
+               <TextView
+                   android:layout_marginTop="2dp"
+                   android:textSize="14sp"
+                   android:textColor="@color/orange_500"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:singleLine="true"
+                   android:ellipsize="marquee"
+                   android:text="@string/main_introduce_third"/>
            </LinearLayout>
         </kaede.me.howoldrobot.widget.AgeIndicatorLayout>
         <LinearLayout
