--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kaede.me.howoldrobot.webview.WebViewActivity">
+    tools:context="me.me.howoldrobot.webview.WebViewActivity">
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/layout_browser_fragment"
