--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -1,11 +1,18 @@
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="me.me.howoldrobot.webview.WebViewFragment">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="me.me.howoldrobot.webview.WebViewFragment">
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_browser"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <WebView
             android:id="@+id/web_browser"
             android:layout_width="match_parent"
