--- a/app/src/main/res/drawable/selector_bg_button_round.xml
+++ b/app/src/main/res/drawable/selector_bg_button_round.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:state_pressed="false" android:drawable="@drawable/bg_button_round"></item>
-<item android:state_pressed="true" android:drawable="@color/orange_200"></item>
+    <item android:state_pressed="false" android:drawable="@drawable/bg_button_round"></item>
+    <item android:state_pressed="true" android:drawable="@color/orange_200"></item>
 </selector>
