--- a/app/src/main/res/layout/item_age_indicator.xml
+++ b/app/src/main/res/layout/item_age_indicator.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <me.kaede.howoldrobot.widget.AgeIndicatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content" android:gravity="center"
-    android:layout_height="wrap_content" android:background="@drawable/bg_indicator"
+                                                android:orientation="horizontal"
+                                                android:layout_width="wrap_content"
+                                                android:gravity="center"
+                                                android:layout_height="wrap_content"
+                                                android:background="@drawable/bg_indicator"
     >
+
     <LinearLayout
         android:paddingBottom="5dp"
         android:layout_width="@dimen/indicator_width"
         android:layout_height="@dimen/indicator_height"
         android:gravity="center">
+
         <ImageView
-                android:id="@+id/iv_ageindicator_gender"
+            android:id="@+id/iv_ageindicator_gender"
             android:src="@drawable/icon_gender_female"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/tv_ageindicator_age"
             android:layout_marginLeft="8dp"
@@ -21,7 +31,7 @@
             android:text="17"
             android:textColor="@android:color/white"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </me.kaede.howoldrobot.widget.AgeIndicatorLayout>
