--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <resources>
     <color name="orange_500">#FF9800</color>
     <color name="orange_200">#FFCC80</color>
