--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2016. Kaede
+  -->
+
 <resources>
 
     <!-- Base application theme. -->
@@ -5,7 +9,7 @@
         <item name="colorPrimary">@color/orange_500</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="actionBarStyle">@style/MyActionBar</item>
-       <!-- <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>-->
+        <!-- <item name="android:titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>-->
         <!-- Customize your theme here. -->
     </style>
 
@@ -22,6 +26,7 @@
         <item name="titleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
         <item name="subtitleTextStyle">@style/MyTheme.ActionBar.TitleTextStyle</item>
     </style>
+
     <style name="MyTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">normal</item>
