--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,28 +2,20 @@
   ~ Copyright (c) 2016. Kaede
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="#DDD"
-              android:orientation="vertical"
-              tools:context=".MainActivity">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#DDD"
+    android:orientation="vertical"
+    tools:context=".analyse.activity.MainActivity">
 
-    <LinearLayout
-        android:visibility="gone"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/common_actionbar_height"
-        android:background="@color/orange_500"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"/>
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,14 +23,14 @@
 
         <LinearLayout
             android:id="@+id/layout_main_photo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/layout_main_bottom"
+            android:layout_marginBottom="@dimen/margin_main_top"
             android:layout_marginLeft="@dimen/margin_main_left"
             android:layout_marginRight="@dimen/margin_main_left"
             android:layout_marginTop="@dimen/margin_main_top"
-            android:layout_marginBottom="@dimen/margin_main_top"
-            android:background="@drawable/cardui_round_bg"
-            android:layout_above="@+id/layout_main_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:background="@drawable/bg_rouned_white"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -49,165 +41,165 @@
                 >
 
                 <me.kaede.howoldrobot.widget.FaceImageView
-                    android:layout_margin="@dimen/border_main_photo"
                     android:id="@+id/iv_main_face"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/border_main_photo"/>
             </LinearLayout>
 
         </LinearLayout>
 
         <me.kaede.howoldrobot.widget.AgeIndicatorLayout
 
-            android:background="#00000000"
             android:id="@+id/layout_main_age"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/layout_main_bottom"
+            android:layout_marginBottom="@dimen/margin_main_top"
             android:layout_marginLeft="@dimen/margin_main_left"
             android:layout_marginRight="@dimen/margin_main_left"
             android:layout_marginTop="@dimen/margin_main_top"
-            android:layout_marginBottom="@dimen/margin_main_top"
-            android:layout_width="match_parent"
-            android:layout_above="@+id/layout_main_bottom"
-            android:layout_height="match_parent">
+            android:background="#00000000">
 
             <LinearLayout
                 android:id="@+id/layout_main_introduce"
-                android:gravity="center"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_main_introduce_logo"
-                    android:layout_margin="@dimen/border_main_photo"
-                    android:src="@drawable/icon_how_old_02"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/border_main_photo"
+                    android:src="@drawable/icon_how_old_02"/>
 
                 <LinearLayout
                     android:id="@+id/layout_main_introduce_text"
-                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/orange_500"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:singleLine="true"
                         android:ellipsize="marquee"
-                        android:text="@string/main_introduce_first"/>
+                        android:singleLine="true"
+                        android:text="@string/main_introduce_first"
+                        android:textColor="@color/orange_500"
+                        android:textSize="14sp"/>
 
                     <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/orange_500"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:singleLine="true"
+                        android:layout_marginTop="2dp"
                         android:ellipsize="marquee"
-                        android:text="@string/main_introduce_second"/>
+                        android:singleLine="true"
+                        android:text="@string/main_introduce_second"
+                        android:textColor="@color/orange_500"
+                        android:textSize="14sp"/>
 
                     <TextView
-                        android:layout_marginTop="2dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/orange_500"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:singleLine="true"
+                        android:layout_marginTop="2dp"
                         android:ellipsize="marquee"
-                        android:text="@string/main_introduce_third"/>
+                        android:singleLine="true"
+                        android:text="@string/main_introduce_third"
+                        android:textColor="@color/orange_500"
+                        android:textSize="14sp"/>
                 </LinearLayout>
             </LinearLayout>
         </me.kaede.howoldrobot.widget.AgeIndicatorLayout>
 
         <LinearLayout
-            android:layout_marginLeft="@dimen/margin_main_left"
-            android:layout_marginRight="@dimen/margin_main_left"
-            android:layout_marginBottom="@dimen/margin_main_top"
             android:id="@+id/layout_main_bottom"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:gravity="center"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/cardui_round_bg"
+            android:layout_marginBottom="@dimen/margin_main_top"
+            android:layout_marginLeft="@dimen/margin_main_left"
+            android:layout_marginRight="@dimen/margin_main_left"
+            android:background="@drawable/bg_rouned_white"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:id="@+id/btn_main_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:background="@drawable/selector_bg_button_round"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@drawable/icon_camera"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_camera"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:drawablePadding="10dp"
                     android:text="@string/main_tv_camera"
-                    android:layout_marginLeft="5dp"
                     android:textColor="@android:color/white"
-                    android:drawablePadding="10dp"
                     />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:id="@+id/btn_main_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:background="@drawable/selector_bg_button_round"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@drawable/icon_gallery"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_gallery"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/main_tv_gallery"
                     android:layout_marginLeft="5dp"
-                    android:textColor="@android:color/white"
                     android:drawablePadding="10dp"
+                    android:text="@string/main_tv_gallery"
+                    android:textColor="@android:color/white"
                     />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:id="@+id/btn_main_share"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:background="@drawable/selector_bg_button_round"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:src="@drawable/icon_share"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_share"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/main_tv_share"
                     android:layout_marginLeft="5dp"
-                    android:textColor="@android:color/white"
                     android:drawablePadding="10dp"
+                    android:text="@string/main_tv_share"
+                    android:textColor="@android:color/white"
                     />
             </LinearLayout>
         </LinearLayout>
