--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,8 @@
             <LinearLayout
                 android:id="@+id/layout_main_border"
                 android:layout_width="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
 
                 <me.kaede.howoldrobot.widget.FaceImageView
                     android:id="@+id/iv_main_face"
@@ -87,7 +87,8 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_round"
+                android:background="@drawable/shape_bg_buttons"
+                android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -113,7 +114,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_round"
+                android:background="@drawable/shape_bg_buttons"
+                android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -138,7 +140,8 @@
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_round"
+                android:background="@drawable/shape_bg_buttons"
+                android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
                 android:orientation="horizontal">
 
