--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,7 +6,11 @@
 <resources>
     <color name="orange_500">#FF9800</color>
     <color name="orange_200">#FFCC80</color>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#03A9F4</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorButton">#0288D1</color>
+    <color name="colorPhotoBorder">#AA03A9F4</color>
 </resources>
