--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="indicator_width">70dp</dimen>
 
     <dimen name="toolbar_elevation">2dp</dimen>
+    <dimen name="btn_elevation">1dp</dimen>
 </resources>
